--- a/css/style.css
+++ b/css/style.css
@@ -681,3 +681,164 @@ width: 100%;
   padding: 0 0 0 40px;
   }
   }
+
+  /*=====
+  .main-timeline{
+    font-family: 'Montserrat', sans-serif;
+    padding: 25px 0 0;
+    }
+    .main-timeline:after{
+    content: '';
+    display: block;
+    clear: both;
+    }
+    .main-timeline:before{
+    content: '';
+    border-left: 7px dotted #474050;
+    height: 100%;
+    width: 7px;
+    transform: translateX(-50%);
+    position: absolute;
+    left: 50%;
+    top: 0;
+    z-index: 1;
+    }
+    .main-timeline .timeline{ margin: 0 0 30px 0; }
+    .main-timeline .timeline-content{
+    color: #999;
+    background: #fff;
+    font-size: 0;
+    text-align: center;
+    padding-left: calc(50% + 50px);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    border-radius: 20px;
+    display: block;
+    position: relative;
+    }
+    .main-timeline .timeline-content:hover{ text-decoration: none; }
+    .main-timeline .timeline-year{
+    color: #fff;
+    background-color: #474050;
+    font-size: 30px;
+    font-weight: 700;
+    padding: 10px 20px;
+    border-radius: 20px;
+    transform: translateY(-50%);
+    position: absolute;
+    left: 20%;
+    top: 50%;
+    }
+    .main-timeline .timeline-icon{
+    color: #fff;
+    background: #ff5a44;
+    font-size: 50px;
+    line-height: 103px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    z-index: 1;
+    }
+    .main-timeline .inner-content{ padding: 20px; }
+    .main-timeline .title{
+    color: #474050;
+    font-size: 20px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin: 0 0 5px;
+    }
+    .main-timeline .description{
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 22px;
+    margin: 0;
+    }
+    .main-timeline .timeline:nth-child(even) .timeline-content{
+    padding-left: 0;
+    padding-right: calc(50% + 50px);
+    }
+    .main-timeline .timeline:nth-child(even) .timeline-year{
+     left: auto;
+    right: 20%;
+    }
+    .main-timeline .timeline:nth-child(4n+2) .timeline-icon{ background-color: #fc7f25; }
+    .main-timeline .timeline:nth-child(4n+3) .timeline-icon{ background-color: #8358b5; }
+    .main-timeline .timeline:nth-child(4n+4) .timeline-icon{ background-color: #a7d815; }
+    @media screen and (max-width:767px){
+    .main-timeline .timeline-content,
+    .main-timeline .timeline:nth-child(even) .timeline-content{
+    padding: 10px 20px 220px;
+    }
+    .main-timeline .timeline-year,
+    .main-timeline .timeline:nth-child(even) .timeline-year{
+    transform: translateX(-50%) translateY(0);
+    top: calc(100% - 80px);
+    left: 50%;
+    right: auto;
+    z-index: 1;
+    }
+    .main-timeline .timeline-icon{
+    transform: translateX(-50%) translateY(0);
+    top: calc(100% - 200px);
+    left: 50%;
+    }
+    .main-timeline .inner-content{
+    background-color: #fff;
+    padding: 10px 0;
+    border-radius: 20px;
+    position: relative;
+    z-index: 1;
+    }
+    }
+    */
+    ul.timeline {
+      list-style-type: none;
+      position: relative;
+      padding-left: 1.5rem;
+  }
+  
+   /* Timeline vertical line */
+  ul.timeline:before {
+      content: ' ';
+      background: #fff;
+      display: inline-block;
+      position: absolute;
+      left: 16px;
+      width: 4px;
+      height: 100%;
+      z-index: 400;
+      border-radius: 1rem;
+  }
+  
+  li.timeline-item {
+      margin: 20px 0;
+  }
+  
+  /* Timeline item arrow */
+  .timeline-arrow {
+      border-top: 0.5rem solid transparent;
+      border-right: 0.5rem solid #fff;
+      border-bottom: 0.5rem solid transparent;
+      display: block;
+      position: absolute;
+      left: 2rem;
+  }
+  
+  /* Timeline item circle marker */
+  li.timeline-item::before {
+      content: ' ';
+      background: #ddd;
+      display: inline-block;
+      position: absolute;
+      border-radius: 50%;
+      border: 3px solid #fff;
+      left: 11px;
+      width: 14px;
+      height: 14px;
+      z-index: 400;
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  }
+  
