--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ a {
         top: 100%;
         position: absolute;
         text-align: left;
-        border-top: 2px solid #c2fdff;
+        border-top: 2px solid #088ecc;
         -webkit-box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
         box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
         padding: 0px 0;
@@ -127,7 +127,7 @@ a {
             position: absolute;
             pointer-events: none; }
           .site-navbar .site-navigation .site-menu .has-children .dropdown.arrow-top:before {
-            border-color: rgba(136, 183, 213, 0);
+            border-color: rgba(239, 244, 247, 0);
             border-bottom-color: #fff;
             border-width: 10px;
             margin-left: -10px; }
@@ -323,7 +323,7 @@ a {
   .sticky-wrapper .site-navbar {
     border-bottom: 1px solid rgba(255, 255, 255, 0.1); }
     .sticky-wrapper .site-navbar .site-menu-toggle {
-      color: #c2fdff; }
+      color:#d0cde1 ; }
     .sticky-wrapper .site-navbar .site-logo a {
       font-size: 40px;
       text-transform: uppercase;
@@ -331,22 +331,22 @@ a {
       font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
       color: #d0cde1; }
     .sticky-wrapper .site-navbar .site-menu > li > a {
-      color: #5C5470 !important; }
+      color: #e4dff0 !important; }
       .sticky-wrapper .site-navbar .site-menu > li > a:hover, .sticky-wrapper .site-navbar .site-menu > li > a.active {
-        color: #000 !important; }
+        color: rgb(156, 231, 250) !important; }
   .sticky-wrapper.is-sticky .site-navbar {
-    background: #fff;
+    background: rgb(199, 71, 71);
     border-bottom: 1px solid transparent;
     -webkit-box-shadow: 4px 0 20px -5px rgba(0, 0, 0, 0.1);
     box-shadow: 4px 0 20px -5px rgba(0, 0, 0, 0.1); }
     .sticky-wrapper.is-sticky .site-navbar .site-menu-toggle {
-      color: #000; }
+      color: rgb(213, 235, 236); }
     .sticky-wrapper.is-sticky .site-navbar .site-logo a {
-      color: #007bff; }
+      color: #dbe3ec; }
     .sticky-wrapper.is-sticky .site-navbar .site-menu > li > a {
-      color: #000 !important; }
+      color: rgb(223, 229, 233) !important; }
       .sticky-wrapper.is-sticky .site-navbar .site-menu > li > a:hover, .sticky-wrapper.is-sticky .site-navbar .site-menu > li > a.active {
-        color: #007bff !important; }
+        color: #edf4fc !important; }
 
 .about_image img
 {
@@ -984,4 +984,153 @@ width: 100%;
 
 .custom-shape-divider-bottom-1643906469 .shape-fill {
   fill: #b3acdd;
+}
+
+.circles {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+}
+
+.circles li {
+	position: absolute;
+	display: block;
+	list-style: none;
+	width: 20px;
+	height: 20px;
+	background: rgba(96, 183, 199, 0.1);
+	animation: animate 25s linear infinite;
+	bottom: calc(-150px - 40vh);
+}
+
+.circles li:nth-child(1) {
+	left: 25%;
+	width: 80px;
+	height: 80px;
+	animation-delay: 0s;
+	animation-duration: 20s;
+	border-radius: 50%;
+	border-top-left-radius: 0 !important;
+	background: rgba(47, 44, 92, 0.1);
+}
+
+.circles li:nth-child(2) {
+	left: 10%;
+	width: 20px;
+	height: 20px;
+	animation-delay: 0s;
+	animation-duration: 25s;
+	border-radius: 50%;
+	border-top-left-radius: 0 !important;
+	background: rgba(96, 183, 199, 0.1);
+}
+
+.circles li:nth-child(3) {
+	left: 70%;
+	width: 20px;
+	height: 20px;
+	animation-delay: 0s;
+	animation-duration: 20s;
+	border-radius: 50%;
+	border-top-left-radius: 0 !important;
+	background: rgba(47, 44, 92, 0.1);
+}
+
+.circles li:nth-child(4) {
+	left: 40%;
+	width: 60px;
+	height: 60px;
+	animation-delay: 0s;
+	animation-duration: 15s;
+	border-radius: 50%;
+	border-top-left-radius: 0 !important;
+	background: rgba(114, 63, 145, 0.1);
+}
+
+.circles li:nth-child(5) {
+	left: 65%;
+	width: 20px;
+	height: 20px;
+	animation-delay: 0s;
+	animation-duration: 20s;
+	border-radius: 50%;
+	border-top-left-radius: 0 !important;
+	background: rgba(96, 183, 199, 0.1);
+}
+
+.circles li:nth-child(6) {
+	left: 75%;
+	width: 90px;
+	height: 90px;
+	animation-delay: 0s;
+	animation-duration: 25s;
+	border-radius: 50%;
+	border-top-left-radius: 0 !important;
+	background: rgba(114, 63, 145, 0.1);
+}
+
+.circles li:nth-child(7) {
+	left: 35%;
+	width: 50px;
+	height: 50px;
+	animation-delay: 0s;
+	animation-duration: 30s;
+	border-radius: 50%;
+	border-top-left-radius: 0 !important;
+	background: rgba(47, 44, 92, 0.1);
+}
+
+.circles li:nth-child(8) {
+	left: 50%;
+	width: 25px;
+	height: 25px;
+	animation-delay: 0s;
+	animation-duration: 35s;
+	border-radius: 50%;
+	border-top-left-radius: 0 !important;
+	background: rgba(114, 63, 145, 0.1);
+}
+
+.circles li:nth-child(9) {
+	left: 20%;
+	width: 15px;
+	height: 15px;
+	animation-delay: 0s;
+	animation-duration: 40s;
+	border-radius: 50%;
+	border-top-left-radius: 0 !important;
+	background: rgba(47, 44, 92, 0.1);
+}
+
+.circles li:nth-child(10) {
+	left: 85%;
+	width: 50px;
+	height: 50px;
+	animation-delay: 0s;
+	animation-duration: 45s;
+	border-radius: 50%;
+	border-top-left-radius: 0 !important;
+	background: rgba(96, 183, 199, 0.1);
+}
+
+@keyframes animate {
+	0% {
+		transform: translateY(0) rotate(0deg);
+		opacity: 0;
+	}
+	50% {
+		transform: translateY(-60vh) rotate(360deg);
+		opacity: 1;
+	}
+	100% {
+		transform: translateY(-120vh) rotate(720deg);
+		opacity: 0;
+	}
+}
+.footsocial a i
+{
+  color: #b3acdd;
 }
